--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,6 +54,8 @@
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:text="Name"
+       android:letterSpacing="0.1"
+       android:typeface="serif"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="16sp"
@@ -66,7 +68,9 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
    android:textSize="14sp"
+    android:typeface="serif"
     android:text="Kelas"
+    android:letterSpacing="0.1"
    app:layout_constraintStart_toStartOf="@id/tv_namesiswa"
     app:layout_constraintTop_toBottomOf="@id/tv_namesiswa"
     android:layout_marginTop="12dp"
@@ -78,6 +82,8 @@
     android:layout_height="wrap_content"
     android:text="Nama Wali kelas"
     android:textSize="14sp"
+    android:letterSpacing="0.1"
+    android:typeface="serif"
     android:layout_marginTop="12dp"
     android:textColor="@color/black"
     app:layout_constraintTop_toBottomOf="@id/tv_kelassiswa"
@@ -100,7 +106,9 @@
        android:layout_height="wrap_content"
       android:textSize="12sp"
       android:text="Jadwal"
+       android:letterSpacing="0.1"
       android:textStyle="bold"
+       android:typeface="serif"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"
       app:layout_constraintStart_toStartOf="@id/img_jadwal"
@@ -123,6 +131,8 @@
        android:textSize="12sp"
        android:text="Absensi"
        android:textStyle="bold"
+       android:letterSpacing="0.1"
+       android:typeface="serif"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@id/img_absen"
@@ -145,7 +155,9 @@
        android:textSize="12sp"
        android:text="Tugas"
        android:textStyle="bold"
+       android:typeface="serif"
        android:textColor="@color/black"
+       android:letterSpacing="0.1"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@id/img_tugas"
        app:layout_constraintTop_toBottomOf="@id/img_jadwal"
@@ -168,6 +180,8 @@
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="Nilai"
+       android:letterSpacing="0.1"
+       android:typeface="serif"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/img_nilai"
@@ -189,8 +203,10 @@
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="Kolsutasi"
+       android:letterSpacing="0.1"
        android:textStyle="bold"
        android:textColor="@color/black"
+       android:typeface="serif"
        app:layout_constraintStart_toStartOf="@id/img_kolsutasi"
        app:layout_constraintTop_toBottomOf="@id/img_kolsutasi"
        app:layout_constraintEnd_toEndOf="@id/img_kolsutasi"
