--- a/app/src/main/res/layout/activity_absen_main.xml
+++ b/app/src/main/res/layout/activity_absen_main.xml
@@ -20,6 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/fab_margin"
         android:layout_marginBottom="16dp"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@android:drawable/ic_input_add" />
@@ -34,6 +35,7 @@
         android:padding="10dp"
         android:drawablePadding="10dp"
         android:textColor="@color/white"
+        android:onClick="showDatePicker"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:background="@color/purple_700"
